--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <title>Login Form</title>
+    
   </head>
   <body>
     <script src="./src/index.js" type="text/jsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <div id="root"></div>
   </body>
 </html>
